2010-05-06  Luiz Agostini  <luiz.agostini@openbossa.org>

        Rubber-stamped by Simon Hausmann.

        [Qt] use QT_MOBILE_THEME in Symbian
        https://bugs.webkit.org/show_bug.cgi?id=38440

        Putting QT_MOBILE_THEME into use for Symbian.

        * WebCore.pro:

2010-05-14  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        CSSParser::parseColor() shouldn't alter 'color' unless passed a valid color string.
        https://bugs.webkit.org/show_bug.cgi?id=39031

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseColor):
        * editing/ApplyStyleCommand.cpp:
        (WebCore::StyleChange::extractTextStyles): Don't depend on old behavior.
        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setShadow): Remove dead code.

2010-05-14  Aaron Kennedy  <tffeeb@gmail.com>

        Reviewed by Simon Hausmann.

        [Qt] JavaScript unable to invoke methods declared in QML
        https://bugs.webkit.org/show_bug.cgi?id=38949

        JavaScript code executed by webkit cannot call into QML declared
        methods, as it does not check for dynamic meta objects.

        * bridge/qt/qt_instance.cpp:
        (JSC::Bindings::QtInstance::stringValue): Use QMetaObject::metacall.
        * bridge/qt/qt_runtime.cpp:
        (JSC::Bindings::QtRuntimeMetaMethod::call): Ditto.

2010-05-12  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Detect debug mode consistently
        https://bugs.webkit.org/show_bug.cgi?id=38863

        No new tests as there is no new functionality.

        * WebCore.pro:

2010-05-14  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        Ignore invalid values for various CanvasRenderingContext2D properties
        (lineWidth, miterLimit, shadowOffsetX, shadowOffsetY and shadowBlur)

        https://bugs.webkit.org/show_bug.cgi?id=38841
